[package]
name = "wannado"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5", features = ["query"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
rusqlite = { version = "0.27", features = ["chrono", "bundled"] }
chrono = { version = "0.4.19", features = ["serde"] }
askama = { version = "0.11.0"}
tower-http = { version = "0.2.0", features = ["fs", "trace"] }
pulldown-cmark = "0.9.1"
serde_json = "1.0.87"
